Sandbox/src/main.css
:root {
  --back-color: #2e363c;
  --font-color1: white;
  --font-color2: #fd8608;
  --font-color3: #ffa443;
  --background-color1: #35c8b6;
  --background-color2: #2aa39e;
  --background-color3: #30636c;
}

body {
  background-color: var(--back-color);
  margin: 0;
  
}
#root{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.container {
  margin: 5px;
  background: grey;
  padding: 20px;
  border-radius: 20px;
  background: linear-gradient(
    -135deg,
    var(--background-color1),
    var(--background-color2) 30%,
    var(--background-color3)
  );
  color: var(--font-color1);
  width: max-content; 
  height: max-content;
  
}

.content{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;  
  margin: 10px 20px 0;
  height: 100%;
  min-height: calc(100vh - 70px);
}

@media only screen and (max-width: 600px){
  #root{
    width: 100%; 
    height: 100%;
  }
  .container {
    width: min-content; 
    height: min-content;
  }
  .content{
    margin: 10px 0px ;
}

